[package]
name = "BarelyCloud"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64ct = "<1.8.0"

# für TLS (wenn später mit Hyper+Rustls)
hyper = { version = "1", features = ["full"] }
tokio-rustls = "0.25"
rustls = "0.23"
rustls-pemfile = "2"